--- a/sandbox/css-05/css/main.css
+++ b/sandbox/css-05/css/main.css
@@ -11,6 +11,14 @@ div {
     list-style: circle;
 }
 
+#myList .kocka{
+    color: blue;
+}
 
+.pes{
+    color:red ;
+}
 
-
+#myList .pes.kocka {
+    display: none;
+}
