--- a/sandbox/css-02/css/main.css
+++ b/sandbox/css-02/css/main.css
@@ -1,8 +1,8 @@
 body {
     background-color: white;
-    color: red;
+    color: rgb(0, 0, 0);
 }
 
 a:visited {
-    color: red !important;
+    color: rgb(0, 0, 0) !important;
 }
