--- a/sandbox/gab sanbox/gabcss.css
+++ b/sandbox/gab sanbox/gabcss.css
@@ -5,6 +5,7 @@
     padding: 16px;
     font-size: 16px;
     border: none;
+    justify-content: flex-end;
   }
   
   /* The container <div> - needed to position the dropdown content */
@@ -17,6 +18,7 @@
   .dropdown-content {
     display: none;
     position: absolute;
+    right: 0px;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
