Posunula jsem ten weather forecast doprava

--- a/sandbox/stylesa.css
+++ b/sandbox/stylesa.css
@@ -4,5 +4,8 @@ h1 {
 }
 
 #ww_51bb4ca4e6b58 {
-    justify-items: flex-start;
+    position: absolute;
+    right:0px;
+    left:820px;
+    top:10px;
 }
