--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -1,8 +1,34 @@
 body {
     background-color: white;
     color: rgb(0, 0, 0);
+    margin: 0;
+    padding: 0;
 }
 
 a:visited {
     color: rgb(0, 0, 0) !important;
+}
+
+.page-header {
+    display: flex;
+    height: 60px;
+    width: 100%;
+    align-items: center;
+    color: #fff;
+    text-shadow: #000 0 0 .2em;
+    position: fixed;
+    background-color: #000;
+    padding-left: 3%
+}  
+
+header.page-header > h1 {
+    font: bold calc(1em + 2 * (100vw - 120px) / 100) 'calibri', cursive,
+        fantasy;
+}
+
+section {
+    font: 1rem 'Fira Sans', sans-serif;
+    padding-top: 70px;
+    padding-left: 3%;
+    padding-right: 3%;
 }
