--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -15,15 +15,17 @@ a:visited {
     width: 100%;
     align-items: center;
     color: #fff;
-    text-shadow: #000 0 0 .2em;
     position: fixed;
     background-color: #000;
-    padding-left: 3%
+    top: 0;
+    justify-content: space-between;
 }  
 
 header.page-header > h1 {
     font: bold calc(1em + 2 * (100vw - 120px) / 100) 'calibri', cursive,
         fantasy;
+    text-shadow: #000 0 0 .2em;
+
 }
 
 section {
@@ -31,4 +33,8 @@ section {
     padding-top: 70px;
     padding-left: 3%;
     padding-right: 3%;
+}
+
+.title {
+    margin-left: 3%;
 }
