--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -37,4 +37,16 @@ section {
 
 .title {
     margin-left: 3%;
+    margin-right: 10px;
+}
+
+.subheading{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding-top: 14px;
+}
+
+.spacer{
+    flex-grow: 1;
 }
