--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -1,8 +1,7 @@
 body {
-    background-color: white;
+    margin:0;
+    min-height: 100%;
     color: rgb(0, 0, 0);
-    margin: 0;
-    padding: 0;
 }
 
 a:visited {
@@ -33,10 +32,17 @@ section {
     padding-top: 70px;
     padding-left: 3%;
     padding-right: 3%;
+
+    background-color: rgb(254, 207, 0);
+    min-height: 100%;
+    padding: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-top: 60px;
 }
 
 .title {
-    margin-left: 3%;
+    margin-left: 11.5%;
     margin-right: 10px;
 }
 
