--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -56,3 +56,16 @@ section {
 .spacer{
     flex-grow: 1;
 }
+
+.footer{
+    width: 100%;
+    height: 200px;
+    color: #fff;
+    background-color: #000;
+}
+
+.footer-content{
+    padding-top: 10px;
+    padding-left: 11.5%;
+    padding-right: 11.5%;
+}
