--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -1,5 +1,5 @@
 body {
-    margin:0;
+    margin: 0;
     min-height: 100%;
     color: rgb(0, 0, 0);
 }
@@ -12,19 +12,18 @@ a:visited {
     display: flex;
     height: 60px;
     width: 100%;
+    margin-bottom: -30px;
     align-items: center;
-    color: #fff;
     position: fixed;
-    background-color: #000;
+    background-color: rgb(255, 255, 255);
+    border-bottom: solid 2px #000;
     top: 0;
     justify-content: space-between;
-}  
+}
 
-header.page-header > h1 {
-    font: bold calc(1em + 2 * (100vw - 120px) / 100) 'calibri', cursive,
-        fantasy;
+header.page-header>h1 {
+    font: bold calc(1em + 2 * (100vw - 120px) / 100);
     text-shadow: #000 0 0 .2em;
-
 }
 
 section {
@@ -46,25 +45,30 @@ section {
     margin-right: 10px;
 }
 
-.subheading{
+.subheading {
     display: flex;
     flex-direction: row;
     width: 100%;
     padding-top: 14px;
 }
 
-.spacer{
+.spacer {
     flex-grow: 1;
 }
 
-.footer{
+.footer {
     width: 100%;
     height: 200px;
-    color: #fff;
+
+    color: white;
     background-color: #000;
+
+    /*color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    border-top: solid 2px #000;*/
 }
 
-.footer-content{
+.footer-content {
     padding-top: 10px;
     padding-left: 11.5%;
     padding-right: 11.5%;
