--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -16,9 +16,15 @@ a:visited {
     align-items: center;
     position: fixed;
     background-color: rgb(255, 255, 255);
-    border-bottom: solid 2px #000;
     top: 0;
     justify-content: space-between;
+}
+
+.border-top {
+    border-bottom: solid 2px #000;
+    width: 100%;
+    position: absolute;
+    top: 60px;
 }
 
 header.page-header>h1 {
