--- a/sandbox/project/css/dropdown-menu.css
+++ b/sandbox/project/css/dropdown-menu.css
@@ -20,11 +20,11 @@
   display: none;
   position: absolute;
   right: 0px;
-  background-color: #f1f1f1;
+  background-color: #ffffff;
   min-width: 210px;
+  min-height: 100vw;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  margin-top: 2px;
+  margin-top: 13px;
 }
 
 /* Links inside the dropdown */
@@ -33,11 +33,12 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  border-bottom: solid 1px #000000;
 }
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: rgb(248, 248, 248);
 }
 
 /* Show the dropdown menu on hover */
