--- a/sandbox/project/css/dropdown-menu.css
+++ b/sandbox/project/css/dropdown-menu.css
@@ -33,7 +33,7 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  border-bottom: solid 1px #000000;
+  border-bottom: solid 1px #e5e5e5;
 }
 
 /* Change color of dropdown links on hover */
