--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -18,6 +18,7 @@ a:visited {
     background-color: rgb(255, 255, 255);
     top: 0;
     justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
 }
 
 .border-top {
@@ -79,3 +80,5 @@ section {
     padding-left: 11.5%;
     padding-right: 11.5%;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
