--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+
 body {
     margin: 0;
     min-height: 100%;
@@ -57,6 +59,7 @@ section {
     flex-direction: row;
     width: 100%;
     padding-top: 14px;
+    font-weight: bold;
 }
 
 .spacer {
@@ -80,5 +83,3 @@ section {
     padding-left: 11.5%;
     padding-right: 11.5%;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
