--- a/sandbox/project/css/dropdown-menu.css
+++ b/sandbox/project/css/dropdown-menu.css
@@ -21,10 +21,11 @@
   position: absolute;
   right: 0px;
   background-color: #ffffff;
-  min-width: 210px;
+  min-width: 300px;
   min-height: 100vw;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  margin-top: 13px;
+  margin-top: 12px;
+  font-weight: bold;
 }
 
 /* Links inside the dropdown */
