--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -21,6 +21,7 @@ a:visited {
     top: 0;
     justify-content: space-between;
     font-family: 'Poppins', sans-serif;
+    z-index: 1000;
 }
 
 h1 a {
@@ -51,6 +52,7 @@ section {
     margin-left: 10%;
     margin-right: 10%;
     padding-top: 70px;
+    z-index: 900;
 }
 
 .title {
