--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -2,7 +2,6 @@
 
 body {
     margin: 0;
-    min-height: 100%;
     color: rgb(0, 0, 0);
 }
 
@@ -42,10 +41,6 @@ header.page-header>h1 {
 }
 
 section {
-    padding-top: 70px;
-    padding-left: 3%;
-    padding-right: 3%;
-
     background-color: rgb(254, 207, 0);
     min-height: 100%;
     padding: 20px;
@@ -84,6 +79,12 @@ section {
     /*color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
     border-top: solid 2px #000;*/
+}
+
+.height {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 @import url(https://fonts.googleapis.com/css?family=Raleway);
