--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -17,7 +17,7 @@ html {
     margin-bottom: -30px;
     align-items: center;
     position: fixed;
-    background-color: rgb(255, 255, 255);
+    background-color: #d5fc77;
     top: 0;
     justify-content: space-between;
     font-family: 'Poppins', sans-serif;
@@ -42,8 +42,8 @@ header.page-header>h1 {
 }
 
 section {
-    background-color: #FFFDD0;
-    padding: 20px;
+    background-color: #fff;
+    /*padding: 20px;*/
     margin-left: 10%;
     margin-right: 10%;
     padding-top: 75px;
@@ -84,7 +84,7 @@ h2 {
 }
 
 .title {
-    margin-left: 11.5%;
+    margin-left: 10%;
     margin-right: 10px;
     min-width: fit-content;
 }
@@ -99,18 +99,6 @@ h2 {
 
 .spacer {
     flex-grow: 1;
-}
-
-.footer {
-    width: 100%;
-    height: 200px;
-
-    color: white;
-    background-color: #000;
-
-    /*color: rgb(0, 0, 0);
-    background-color: rgb(255, 255, 255);
-    border-top: solid 2px #000;*/
 }
 
 .height {
@@ -137,11 +125,11 @@ body {
 footer {
     display: inline-block;
     height: 70px;
-    background-color: rgb(63, 63, 63);
+    background-color: #d5fc77;
     margin-bottom: -10px;
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    width: 100%;
+    /*margin-left: 10%;
+    margin-right: 10%;*/
 }
 
 footer .copyright {
@@ -157,7 +145,7 @@ footer .copyright {
 
 footer .copyright p {
     padding-left: 10%;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 0.7em;
     line-height: 70px;
     text-transform: capitalize;
