--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -4,6 +4,7 @@
 body {
     margin: 0;
     color: #000;
+    padding: 0;
 }
 
 html {
@@ -48,7 +49,7 @@ section {
     margin-right: 10%;
     padding-top: 75px;
     z-index: 900;
-    font-family: 'Roboto Slab', serif;
+    font-family: Calibri, 'Trebuchet MS', sans-serif;
     min-width: 50vh;
 }
 
@@ -124,9 +125,11 @@ body {
 
 footer {
     display: inline-block;
-    height: 70px;
+    height: 62px;
     background-color: #d5fc77;
-    margin-bottom: -10px;
+    margin-bottom: -12px;
+    width: 100%;
+    border-top: solid 2px #000;
     width: 100%;
     /*margin-left: 10%;
     margin-right: 10%;*/
@@ -147,7 +150,7 @@ footer .copyright p {
     padding-left: 10%;
     color: rgb(0, 0, 0);
     font-size: 0.7em;
-    line-height: 70px;
+    line-height: 60px;
     text-transform: capitalize;
     letter-spacing: 1px;
 }
@@ -172,7 +175,7 @@ footer .social {
 
 footer .social a {
     float: left;
-    line-height: 70px;
+    line-height: 60px;
     text-decoration: none;
     color: rgb(255, 255, 255);
     text-align: center;
