--- a/sandbox/project/css/popup.css
+++ b/sandbox/project/css/popup.css
@@ -51,4 +51,36 @@ body {
     height: 68px;
     background: #27ae60;
     overflow: hidden;
+    border-radius: 3px 3px 0 0;
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .2);
+}
+
+.header h2 {
+    color: white;
+    padding-left: 32px;
+    font-weight: normal;
+}
+
+.fa-times {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    color: #e8f7fc;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.fa-check {
+    font-size: 50px;
+    color: #27ae60;
+    font-weight: bold;
+    height: 80px;
+    width: 80px;
+    border: 1px solid #27ae60;
+    text-align: center;
+    padding-top: 30px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    margin: 30px 0 0 160px;
 }
