--- a/sandbox/project/css/popup.css
+++ b/sandbox/project/css/popup.css
@@ -77,10 +77,21 @@ body {
     font-weight: bold;
     height: 80px;
     width: 80px;
-    border: 1px solid #27ae60;
+    border: 2px solid #27ae60;
     text-align: center;
-    padding-top: 30px;
+    padding-top: 13px;
     border-radius: 50%;
     box-sizing: border-box;
     margin: 30px 0 0 160px;
+}
+
+p {
+    padding-top: 10px;
+    font-size: 19px;
+    color: #1a1a1a;
+    text-align: center;
+}
+
+.line {
+    bottom: 60px;
 }
