--- a/sandbox/project/css/popup.css
+++ b/sandbox/project/css/popup.css
@@ -4,6 +4,7 @@ body {
     font-family: sans-serif;
     background: linear-gradient(#E0EAFC, #CFDEF3);
     height: 100vh;
+    user-select: none;
 }
 
 .center,
@@ -40,11 +41,19 @@ body {
 }
 
 .content {
+    opacity: 0;
+    visibility: hidden;
     width: 400px;
     height: 350px;
     background: white;
     border-radius: 3px;
+    transition: .3s ease-in;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .4)
+}
+
+#click:checked ~ .content {
+    opacity: 1;
+    visibility: visible;
 }
 
 .header {
@@ -93,5 +102,28 @@ p {
 }
 
 .line {
+    position:absolute;
     bottom: 60px;
+    width:100%;
+    height:1px;
+    background:silver;
+}
+
+.close-btn {
+    position:absolute;
+    bottom:12px;
+    right:25px;
+    border: 1px solid #27ae60;
+    border-radius: 3px;
+    color:#27ae60;
+    padding: 8px 10px;
+    font-size: 18px;
+    cursor:pointer;
+}
+
+.close-btn:hover {
+    background:#27ae60;
+    color:white;
+    transition: .5s;
+
 }
