--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     border: 0;
@@ -229,6 +229,6 @@ footer .social a:hover {
 }
 
 .image {
-    margin: 5px;
+    margin: 2%;
     float: left;
 }
