--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -106,6 +106,11 @@ h2 {
     height: calc(100vh - 70px);
 }
 
+.article {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
 /* Colors */
@@ -221,6 +226,14 @@ footer .social a:hover {
 }
 
 .image {
-    margin: 2%;
+    margin-top: 2%;
+    margin-right: 2%;
+    margin-bottom: 0;
     float: left;
+}
+
+.image-c {
+    margin-top: 2%;
+    margin-left: 2%;
+    margin-bottom: 0;
 }
