--- a/sandbox/project/css/dropdown#3.css
+++ b/sandbox/project/css/dropdown#3.css
@@ -1,96 +1,49 @@
-.dropdown {
-    display: inline-block;
-    position: relative;
-    outline: none;
-    margin: 10px;
-}
+ /* Dropdown Button */
+ .dropbtn {
+     background-color: #3498DB;
+     color: white;
+     padding: 16px;
+     font-size: 16px;
+     border: none;
+     cursor: pointer;
+ }
 
-body {
-    font-size: 20px;
-    font-family: Times, "Times New Roman", serif;
-}
+ /* Dropdown button on hover & focus */
+ .dropbtn:hover,
+ .dropbtn:focus {
+     background-color: #2980B9;
+ }
 
+ /* The container <div> - needed to position the dropdown content */
+ .dropdown {
+     position: relative;
+     display: inline-block;
+ }
 
-body {
-    margin: 10px;
-    font-size: 20px;
-    font-family: Times, "Times New Roman", serif;
-}
+ /* Dropdown Content (Hidden by Default) */
+ .dropdown-content {
+     display: none;
+     position: absolute;
+     background-color: #f1f1f1;
+     min-width: 160px;
+     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+     z-index: 1;
+ }
 
-/* dd container */
-.dropdown {
-    display: inline-block;
-    position: relative;
-    outline: none;
-    margin: 10px;
-}
+ /* Links inside the dropdown */
+ .dropdown-content a {
+     color: black;
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+ }
 
-/* button */
-.dropbtn {
-    padding: 12px 16px;
-    color: white;
-    background-color: #861cb9;
-    cursor: pointer;
-    transition: 0.35s ease-out;
-}
+ /* Change color of dropdown links on hover */
+ .dropdown-content a:hover {
+     background-color: #ddd
+ }
 
-/* dd content */
-.dropdown .dropdown-content {
-    position: absolute;
-    top: 50%;
-    background-color: #f7f7f7;
-    min-width: 120%;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 100000;
-    visibility: hidden;
-    opacity: 0;
-    transition: 0.35s ease-out;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    display: block;
-    text-decoration: none;
-    transition: 0.35s ease-out;
-}
-
-.dropdown-content a:hover {
-    background-color: #eaeaea;
-}
-
-/* show dd content */
-.dropdown:focus .dropdown-content {
-    outline: none;
-    transform: translateY(20px);
-    visibility: visible;
-    opacity: 1;
-}
-
-.dropbtn:hover,
-.dropdown:focus .dropbtn {
-    background-color: #691692;
-}
-
-/* mask to close menu by clicking on the button */
-.dropdown .db2 {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    cursor: pointer;
-    z-index: 10;
-    display: none;
-}
-
-.dropdown:focus .db2 {
-    display: inline-block;
-}
-
-.dropdown .db2:focus .dropdown-content {
-    outline: none;
-    visibility: hidden;
-    opacity: 0;
-}
+ /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+ .show {
+     display: block;
+ }
