--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -237,3 +237,107 @@ footer .social a:hover {
     margin-left: 2%;
     margin-bottom: 0;
 }
+
+.table-spacing {
+    margin-right: 15px;
+}
+
+
+/*FOOTER STATIC*/
+.footer-s {
+    display: inline-block;
+    height: 62px;
+    background-color: #d5fc77;
+    width: 100%;
+    border-top: solid 2px #000;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    margin-bottom: 0;
+}
+
+/*
+footer-s .copyright {
+    width: 50%;
+    float: left;
+}
+
+@media (max-width: 600px) {
+    footer-s .copyright {
+        width: 100%;
+    }
+}
+
+footer-s .copyright p {
+    padding-left: 10%;
+    color: rgb(0, 0, 0);
+    font-size: 0.7em;
+    line-height: 60px;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+}
+
+@media (max-width: 600px) {
+    footer-s .copyright p {
+        text-align: center;
+        padding: 0;
+    }
+}
+
+footer-s .social {
+    width: 50%;
+    float: right;
+}
+
+@media (max-width: 600px) {
+    footer-s .social {
+        width: 100%;
+    }
+}
+
+footer-s .social a {
+    float: left;
+    line-height: 60px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-weight: bold;
+    -moz-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    -webkit-transition: all, 0.3s;
+    transition: all, 0.3s;
+}
+
+footer-s .social a:hover {
+    background-color: #222;
+    -moz-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    -webkit-transition: all, 0.3s;
+    transition: all, 0.3s;
+}
+
+.linked-s {
+    background-color: #1E83AE;
+    font-size: 1.2em;
+    width: 20%;
+}
+
+.face-s {
+    background-color: #3D5B94;
+    font-size: 1.2em;
+    width: 20%;
+    color: white
+}
+
+
+.tweet-s {
+    background-color: #3DACDD;
+    font-size: 1.2em;
+    width: 20%;
+}
+
+.support-s {
+    background-color: #6dcd9a;
+    font-size: 0.8em;
+    width: 40%;
+}
