--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -232,7 +232,7 @@ footer .social a:hover {
 }
 
 .support {
-    background-color: #6dcd9a;
+    background-color: #1e3868;
     font-size: 0.8em;
     width: 40%;
 }
