--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -254,6 +254,15 @@ footer .social a:hover {
     margin-right: 15px;
 }
 
+.table-spacing-2 {
+    margin-right: 15px;
+    margin-bottom: 30px;
+}
+
+.table-spacing-3 {
+    margin-bottom: 30px;
+}
+
 
 /*FOOTER STATIC*/
 .footer-s {
