--- a/sandbox/project/css/main.css
+++ b/sandbox/project/css/main.css
@@ -255,18 +255,21 @@ footer .social a:hover {
 }
 
 .table-spacing-2 {
-    margin-right: 15px;
+    margin-right: 10px;
     margin-bottom: 30px;
+    width: 475px;
 }
 
 .table-spacing-3 {
     margin-bottom: 30px;
+    margin-left: 10px;
 }
 
 .tech-hub-table-margin {
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 30px;
+    column-width: 50%;
 }
 
 /*FOOTER STATIC*/
