--- a/sandbox/project/css/popup.css
+++ b/sandbox/project/css/popup.css
@@ -94,4 +94,20 @@ p {
 
 .line {
     bottom: 60px;
+    width:100%;
+    height:1px;
+    background:silver;
+}
+
+.close-btn {
+    position:absolute;
+    bottom:12px;
+    right:25px;
+    border:1px solid #27ae60;
+    border-radius: 3px;
+    color:#27ae60;
+    padding: 8px 10px;
+    font-size:18px;
+    cursor:pointer;
+    
 }
